[package]
name = "conceal_me"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
csv = "1.3.1"
eyre = "0.6.12"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
