[package]
name = "conceal_me"
version = "0.1.0"
author = "dhmnztr"
edition = "2021"
license = "GPL v3"
[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
csv = "1.3.1"
eyre = "0.6.12"
glob = "0.3.2"
hex = "0.4.3"
nix = { version = "0.29.0", features = ["user"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
wifiscanner = "0.5.1"
